# CMake_Demo

exe_ubuntu/: CMakeLists.txt  build.sh
